// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignDetails viewerCanAdminister: false viewing existing 1`] = `
<CampaignDetails
  _fetchCampaignById={[Function]}
  campaignID="c"
  history="[History]"
  isLightTheme={true}
  location="[Location path=/]"
  telemetryService={
    Object {
      "log": [Function],
      "logViewEvent": [Function],
    }
  }
>
  <PageTitle
    title="n"
  />
  <CampaignActionsBar
    campaign={
      Object {
        "__typename": "Campaign",
        "author": Object {
          "username": "alice",
        },
        "branch": "awesome-branch",
        "changesetCountsOverTime": Array [],
        "changesets": Object {
          "stats": Object {
            "closed": 0,
            "merged": 0,
            "total": 10,
          },
          "totalCount": 2,
        },
        "closedAt": null,
        "createdAt": "2020-01-01",
        "description": "d",
        "diffStat": Object {
          "__typename": "IDiffStat",
          "added": 5,
          "changed": 3,
          "deleted": 2,
        },
        "hasUnpublishedPatches": false,
        "id": "c",
        "name": "n",
        "namespace": Object {
          "namespaceName": "alice",
        },
        "updatedAt": "2020-01-01",
        "viewerCanAdminister": false,
      }
    }
  >
    <div
      className="mb-2"
    >
      <span>
        <AnchorLink
          to="/campaigns"
        >
          <a
            href="/campaigns"
          >
            Campaigns
          </a>
        </AnchorLink>
      </span>
      <span
        className="text-muted d-inline-block mx-1"
      >
        /
      </span>
      <span>
        <AnchorLink
          to="/campaigns"
        >
          <a
            href="/campaigns"
          >
            alice
          </a>
        </AnchorLink>
      </span>
      <span
        className="text-muted d-inline-block mx-1"
      >
        /
      </span>
      <span>
        n
      </span>
    </div>
    <div
      className="d-flex mb-2 position-relative"
    >
      <div>
        <h1
          className="mb-1"
        >
          n
        </h1>
        <div>
          <CampaignStateBadge
            isClosed={false}
          >
            <span
              className="badge badge-success text-uppercase mr-2"
            >
              <CampaignsIcon
                className="icon-inline campaign-actions-bar__campaign-icon"
              />
               Open
            </span>
          </CampaignStateBadge>
          <small
            className="text-muted"
          >
            0
            % complete. 
            2
             changesets total
          </small>
        </div>
      </div>
    </div>
  </CampaignActionsBar>
  <CampaignInfoCard
    author={
      Object {
        "username": "alice",
      }
    }
    createdAt="2020-01-01"
    description="d"
    history="[History]"
  >
    <div
      className="card mt-2"
    >
      <div
        className="card-header"
      >
        <strong>
          <UserAvatar
            className="icon-inline"
            user={
              Object {
                "username": "alice",
              }
            }
          />
           
          alice
        </strong>
         
        started 
        <Timestamp
          date="2020-01-01"
        >
          <span
            className="timestamp"
            data-tooltip="2020-01-01"
          >
            in almost 14 years
          </span>
        </Timestamp>
      </div>
      <div
        className="card-body"
      >
        <Markdown
          dangerousInnerHTML="<p>d</p>
"
          history="[History]"
        >
          <div
            className="markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>d</p>
",
              }
            }
            onClick={[Function]}
          />
        </Markdown>
      </div>
    </div>
  </CampaignInfoCard>
  <CampaignStatsCard
    stats={
      Object {
        "closed": 0,
        "merged": 0,
        "total": 10,
      }
    }
  >
    <div
      className="card mt-2"
    >
      <div
        className="card-body"
      >
        <div
          className="d-flex justify-content-between align-items-center"
        >
          <div
            className="d-flex align-items-center"
          >
            <h1
              className="d-inline mb-0"
            >
              <Memo(ProgressCheckIcon)
                className="icon-inline mr-2 text-muted"
              >
                <svg
                  className="mdi-icon icon-inline mr-2 text-muted"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M13,2.03V2.05L13,4.05C17.39,4.59 20.5,8.58 19.96,12.97C19.5,16.61 16.64,19.5 13,19.93V21.93C18.5,21.38 22.5,16.5 21.95,11C21.5,6.25 17.73,2.5 13,2.03M11,2.06C9.05,2.25 7.19,3 5.67,4.26L7.1,5.74C8.22,4.84 9.57,4.26 11,4.06V2.06M4.26,5.67C3,7.19 2.25,9.04 2.05,11H4.05C4.24,9.58 4.8,8.23 5.69,7.1L4.26,5.67M15.5,8.5L10.62,13.38L8.5,11.26L7.44,12.32L10.62,15.5L16.56,9.56L15.5,8.5M2.06,13C2.26,14.96 3.03,16.81 4.27,18.33L5.69,16.9C4.81,15.77 4.24,14.42 4.06,13H2.06M7.1,18.37L5.67,19.74C7.18,21 9.04,21.79 11,22V20C9.58,19.82 8.23,19.25 7.1,18.37Z"
                  />
                </svg>
              </Memo(ProgressCheckIcon)>
            </h1>
             
            0
            % complete
          </div>
          <div
            className="text-muted"
          >
            10
             changesets total
          </div>
          <div
            className="d-flex align-items-center"
          >
            <Memo(SourceBranchIcon)
              className="icon-inline text-muted mr-2"
            >
              <svg
                className="mdi-icon icon-inline text-muted mr-2"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M13,14C9.64,14 8.54,15.35 8.18,16.24C9.25,16.7 10,17.76 10,19A3,3 0 0,1 7,22A3,3 0 0,1 4,19C4,17.69 4.83,16.58 6,16.17V7.83C4.83,7.42 4,6.31 4,5A3,3 0 0,1 7,2A3,3 0 0,1 10,5C10,6.31 9.17,7.42 8,7.83V13.12C8.88,12.47 10.16,12 12,12C14.67,12 15.56,10.66 15.85,9.77C14.77,9.32 14,8.25 14,7A3,3 0 0,1 17,4A3,3 0 0,1 20,7C20,8.34 19.12,9.5 17.91,9.86C17.65,11.29 16.68,14 13,14M7,18A1,1 0 0,0 6,19A1,1 0 0,0 7,20A1,1 0 0,0 8,19A1,1 0 0,0 7,18M7,4A1,1 0 0,0 6,5A1,1 0 0,0 7,6A1,1 0 0,0 8,5A1,1 0 0,0 7,4M17,6A1,1 0 0,0 16,7A1,1 0 0,0 17,8A1,1 0 0,0 18,7A1,1 0 0,0 17,6Z"
                />
              </svg>
            </Memo(SourceBranchIcon)>
             
             unpublished
          </div>
          <div
            className="d-flex align-items-center"
          >
            <Memo(SourceBranchIcon)
              className="icon-inline text-success mr-2"
            >
              <svg
                className="mdi-icon icon-inline text-success mr-2"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M13,14C9.64,14 8.54,15.35 8.18,16.24C9.25,16.7 10,17.76 10,19A3,3 0 0,1 7,22A3,3 0 0,1 4,19C4,17.69 4.83,16.58 6,16.17V7.83C4.83,7.42 4,6.31 4,5A3,3 0 0,1 7,2A3,3 0 0,1 10,5C10,6.31 9.17,7.42 8,7.83V13.12C8.88,12.47 10.16,12 12,12C14.67,12 15.56,10.66 15.85,9.77C14.77,9.32 14,8.25 14,7A3,3 0 0,1 17,4A3,3 0 0,1 20,7C20,8.34 19.12,9.5 17.91,9.86C17.65,11.29 16.68,14 13,14M7,18A1,1 0 0,0 6,19A1,1 0 0,0 7,20A1,1 0 0,0 8,19A1,1 0 0,0 7,18M7,4A1,1 0 0,0 6,5A1,1 0 0,0 7,6A1,1 0 0,0 8,5A1,1 0 0,0 7,4M17,6A1,1 0 0,0 16,7A1,1 0 0,0 17,8A1,1 0 0,0 18,7A1,1 0 0,0 17,6Z"
                />
              </svg>
            </Memo(SourceBranchIcon)>
             
             open
          </div>
          <div
            className="d-flex align-items-center"
          >
            <Memo(SourceMergeIcon)
              className="icon-inline text-merged mr-2"
            >
              <svg
                className="mdi-icon icon-inline text-merged mr-2"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M7,3A3,3 0 0,1 10,6C10,7.29 9.19,8.39 8.04,8.81C8.58,13.81 13.08,14.77 15.19,14.96C15.61,13.81 16.71,13 18,13A3,3 0 0,1 21,16A3,3 0 0,1 18,19C16.69,19 15.57,18.16 15.16,17C10.91,16.8 9.44,15.19 8,13.39V15.17C9.17,15.58 10,16.69 10,18A3,3 0 0,1 7,21A3,3 0 0,1 4,18C4,16.69 4.83,15.58 6,15.17V8.83C4.83,8.42 4,7.31 4,6A3,3 0 0,1 7,3M7,5A1,1 0 0,0 6,6A1,1 0 0,0 7,7A1,1 0 0,0 8,6A1,1 0 0,0 7,5M7,17A1,1 0 0,0 6,18A1,1 0 0,0 7,19A1,1 0 0,0 8,18A1,1 0 0,0 7,17M18,15A1,1 0 0,0 17,16A1,1 0 0,0 18,17A1,1 0 0,0 19,16A1,1 0 0,0 18,15Z"
                />
              </svg>
            </Memo(SourceMergeIcon)>
             
            0
             merged
          </div>
          <div
            className="d-flex align-items-center"
          >
            <Memo(SourceBranchIcon)
              className="icon-inline text-danger mr-2"
            >
              <svg
                className="mdi-icon icon-inline text-danger mr-2"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M13,14C9.64,14 8.54,15.35 8.18,16.24C9.25,16.7 10,17.76 10,19A3,3 0 0,1 7,22A3,3 0 0,1 4,19C4,17.69 4.83,16.58 6,16.17V7.83C4.83,7.42 4,6.31 4,5A3,3 0 0,1 7,2A3,3 0 0,1 10,5C10,6.31 9.17,7.42 8,7.83V13.12C8.88,12.47 10.16,12 12,12C14.67,12 15.56,10.66 15.85,9.77C14.77,9.32 14,8.25 14,7A3,3 0 0,1 17,4A3,3 0 0,1 20,7C20,8.34 19.12,9.5 17.91,9.86C17.65,11.29 16.68,14 13,14M7,18A1,1 0 0,0 6,19A1,1 0 0,0 7,20A1,1 0 0,0 8,19A1,1 0 0,0 7,18M7,4A1,1 0 0,0 6,5A1,1 0 0,0 7,6A1,1 0 0,0 8,5A1,1 0 0,0 7,4M17,6A1,1 0 0,0 16,7A1,1 0 0,0 17,8A1,1 0 0,0 18,7A1,1 0 0,0 17,6Z"
                />
              </svg>
            </Memo(SourceBranchIcon)>
             
            0
             closed
          </div>
        </div>
      </div>
    </div>
  </CampaignStatsCard>
  <TabsWithURLViewStatePersistence
    className="panel__tabs mt-3"
    location="[Location path=/]"
    tabClassName="tab-bar__tab--h5like"
    tabs={
      Array [
        Object {
          "id": "changesets",
          "label": <React.Fragment>
            <Memo(SourceBranchIcon)
              className="icon-inline"
            />
             Changesets
             
            <span
              className="badge badge-secondary"
            >
              2
            </span>
          </React.Fragment>,
        },
        Object {
          "id": "burndownChart",
          "label": <React.Fragment>
            <Memo(ChartPpfIcon)
              className="icon-inline"
            />
             Burndown chart
          </React.Fragment>,
        },
      ]
    }
  >
    <Tabs
      activeTab="changesets"
      className="panel__tabs mt-3"
      location="[Location path=/]"
      tabClassName="tab-bar__tab--h5like"
      tabComponent={[Function]}
      tabs={
        Array [
          Object {
            "id": "changesets",
            "label": <React.Fragment>
              <Memo(SourceBranchIcon)
                className="icon-inline"
              />
               Changesets
               
              <span
                className="badge badge-secondary"
              >
                2
              </span>
            </React.Fragment>,
          },
          Object {
            "id": "burndownChart",
            "label": <React.Fragment>
              <Memo(ChartPpfIcon)
                className="icon-inline"
              />
               Burndown chart
            </React.Fragment>,
          },
        ]
      }
    >
      <div
        className="tabs panel__tabs mt-3"
      >
        <TabBar
          activeTab="changesets"
          tabClassName="tab-bar__tab--h5like"
          tabComponent={[Function]}
          tabs={
            Array [
              Object {
                "id": "changesets",
                "label": <React.Fragment>
                  <Memo(SourceBranchIcon)
                    className="icon-inline"
                  />
                   Changesets
                   
                  <span
                    className="badge badge-secondary"
                  >
                    2
                  </span>
                </React.Fragment>,
              },
              Object {
                "id": "burndownChart",
                "label": <React.Fragment>
                  <Memo(ChartPpfIcon)
                    className="icon-inline"
                  />
                   Burndown chart
                </React.Fragment>,
              },
            ]
          }
        >
          <div
            className="tab-bar "
          >
            <Component
              className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--active tab-bar__tab--h5like"
              key="changesets"
              tab={
                Object {
                  "id": "changesets",
                  "label": <React.Fragment>
                    <Memo(SourceBranchIcon)
                      className="icon-inline"
                    />
                     Changesets
                     
                    <span
                      className="badge badge-secondary"
                    >
                      2
                    </span>
                  </React.Fragment>,
                }
              }
            >
              <AnchorLink
                className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--active tab-bar__tab--h5like"
                onClick={[Function]}
                to={
                  Object {
                    "hash": "tab=changesets",
                    "key": undefined,
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  }
                }
              >
                <a
                  className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--active tab-bar__tab--h5like"
                  href="/#tab=changesets"
                  onClick={[Function]}
                >
                  <Memo(SourceBranchIcon)
                    className="icon-inline"
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M13,14C9.64,14 8.54,15.35 8.18,16.24C9.25,16.7 10,17.76 10,19A3,3 0 0,1 7,22A3,3 0 0,1 4,19C4,17.69 4.83,16.58 6,16.17V7.83C4.83,7.42 4,6.31 4,5A3,3 0 0,1 7,2A3,3 0 0,1 10,5C10,6.31 9.17,7.42 8,7.83V13.12C8.88,12.47 10.16,12 12,12C14.67,12 15.56,10.66 15.85,9.77C14.77,9.32 14,8.25 14,7A3,3 0 0,1 17,4A3,3 0 0,1 20,7C20,8.34 19.12,9.5 17.91,9.86C17.65,11.29 16.68,14 13,14M7,18A1,1 0 0,0 6,19A1,1 0 0,0 7,20A1,1 0 0,0 8,19A1,1 0 0,0 7,18M7,4A1,1 0 0,0 6,5A1,1 0 0,0 7,6A1,1 0 0,0 8,5A1,1 0 0,0 7,4M17,6A1,1 0 0,0 16,7A1,1 0 0,0 17,8A1,1 0 0,0 18,7A1,1 0 0,0 17,6Z"
                      />
                    </svg>
                  </Memo(SourceBranchIcon)>
                   Changesets
                   
                  <span
                    className="badge badge-secondary"
                  >
                    2
                  </span>
                </a>
              </AnchorLink>
            </Component>
            <Component
              className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--inactive tab-bar__tab--h5like"
              key="burndownChart"
              tab={
                Object {
                  "id": "burndownChart",
                  "label": <React.Fragment>
                    <Memo(ChartPpfIcon)
                      className="icon-inline"
                    />
                     Burndown chart
                  </React.Fragment>,
                }
              }
            >
              <AnchorLink
                className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--inactive tab-bar__tab--h5like"
                onClick={[Function]}
                to={
                  Object {
                    "hash": "tab=burndownChart",
                    "key": undefined,
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  }
                }
              >
                <a
                  className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--inactive tab-bar__tab--h5like"
                  href="/#tab=burndownChart"
                  onClick={[Function]}
                >
                  <Memo(ChartPpfIcon)
                    className="icon-inline"
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M5 6V8C8.2 8 11.36 9.18 13.57 11.15C15.64 13 16.83 15.5 17 18H18.97A14 12.5 0 0 0 5 6M22 21H2V3H4V19H22Z"
                      />
                    </svg>
                  </Memo(ChartPpfIcon)>
                   Burndown chart
                </a>
              </AnchorLink>
            </Component>
          </div>
        </TabBar>
        <CampaignChangesets
          campaignID="c"
          campaignUpdates="[Subject]"
          changesetUpdates="[Subject]"
          history="[History]"
          isLightTheme={true}
          key="changesets"
          location="[Location path=/]"
          telemetryService={
            Object {
              "log": [Function],
              "logViewEvent": [Function],
            }
          }
          viewerCanAdminister={false}
        />
      </div>
    </Tabs>
  </TabsWithURLViewStatePersistence>
</CampaignDetails>
`;

exports[`CampaignDetails viewerCanAdminister: true viewing existing 1`] = `
<CampaignDetails
  _fetchCampaignById={[Function]}
  campaignID="c"
  history="[History]"
  isLightTheme={true}
  location="[Location path=/]"
  telemetryService={
    Object {
      "log": [Function],
      "logViewEvent": [Function],
    }
  }
>
  <PageTitle
    title="n"
  />
  <CampaignActionsBar
    campaign={
      Object {
        "__typename": "Campaign",
        "author": Object {
          "username": "alice",
        },
        "branch": "awesome-branch",
        "changesetCountsOverTime": Array [],
        "changesets": Object {
          "stats": Object {
            "closed": 0,
            "merged": 0,
            "total": 10,
          },
          "totalCount": 2,
        },
        "closedAt": null,
        "createdAt": "2020-01-01",
        "description": "d",
        "diffStat": Object {
          "__typename": "IDiffStat",
          "added": 5,
          "changed": 3,
          "deleted": 2,
        },
        "hasUnpublishedPatches": false,
        "id": "c",
        "name": "n",
        "namespace": Object {
          "namespaceName": "alice",
        },
        "updatedAt": "2020-01-01",
        "viewerCanAdminister": true,
      }
    }
  >
    <div
      className="mb-2"
    >
      <span>
        <AnchorLink
          to="/campaigns"
        >
          <a
            href="/campaigns"
          >
            Campaigns
          </a>
        </AnchorLink>
      </span>
      <span
        className="text-muted d-inline-block mx-1"
      >
        /
      </span>
      <span>
        <AnchorLink
          to="/campaigns"
        >
          <a
            href="/campaigns"
          >
            alice
          </a>
        </AnchorLink>
      </span>
      <span
        className="text-muted d-inline-block mx-1"
      >
        /
      </span>
      <span>
        n
      </span>
    </div>
    <div
      className="d-flex mb-2 position-relative"
    >
      <div>
        <h1
          className="mb-1"
        >
          n
        </h1>
        <div>
          <CampaignStateBadge
            isClosed={false}
          >
            <span
              className="badge badge-success text-uppercase mr-2"
            >
              <CampaignsIcon
                className="icon-inline campaign-actions-bar__campaign-icon"
              />
               Open
            </span>
          </CampaignStateBadge>
          <small
            className="text-muted"
          >
            0
            % complete. 
            2
             changesets total
          </small>
        </div>
      </div>
    </div>
  </CampaignActionsBar>
  <CampaignInfoCard
    author={
      Object {
        "username": "alice",
      }
    }
    createdAt="2020-01-01"
    description="d"
    history="[History]"
  >
    <div
      className="card mt-2"
    >
      <div
        className="card-header"
      >
        <strong>
          <UserAvatar
            className="icon-inline"
            user={
              Object {
                "username": "alice",
              }
            }
          />
           
          alice
        </strong>
         
        started 
        <Timestamp
          date="2020-01-01"
        >
          <span
            className="timestamp"
            data-tooltip="2020-01-01"
          >
            in almost 14 years
          </span>
        </Timestamp>
      </div>
      <div
        className="card-body"
      >
        <Markdown
          dangerousInnerHTML="<p>d</p>
"
          history="[History]"
        >
          <div
            className="markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>d</p>
",
              }
            }
            onClick={[Function]}
          />
        </Markdown>
      </div>
    </div>
  </CampaignInfoCard>
  <CampaignStatsCard
    stats={
      Object {
        "closed": 0,
        "merged": 0,
        "total": 10,
      }
    }
  >
    <div
      className="card mt-2"
    >
      <div
        className="card-body"
      >
        <div
          className="d-flex justify-content-between align-items-center"
        >
          <div
            className="d-flex align-items-center"
          >
            <h1
              className="d-inline mb-0"
            >
              <Memo(ProgressCheckIcon)
                className="icon-inline mr-2 text-muted"
              >
                <svg
                  className="mdi-icon icon-inline mr-2 text-muted"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M13,2.03V2.05L13,4.05C17.39,4.59 20.5,8.58 19.96,12.97C19.5,16.61 16.64,19.5 13,19.93V21.93C18.5,21.38 22.5,16.5 21.95,11C21.5,6.25 17.73,2.5 13,2.03M11,2.06C9.05,2.25 7.19,3 5.67,4.26L7.1,5.74C8.22,4.84 9.57,4.26 11,4.06V2.06M4.26,5.67C3,7.19 2.25,9.04 2.05,11H4.05C4.24,9.58 4.8,8.23 5.69,7.1L4.26,5.67M15.5,8.5L10.62,13.38L8.5,11.26L7.44,12.32L10.62,15.5L16.56,9.56L15.5,8.5M2.06,13C2.26,14.96 3.03,16.81 4.27,18.33L5.69,16.9C4.81,15.77 4.24,14.42 4.06,13H2.06M7.1,18.37L5.67,19.74C7.18,21 9.04,21.79 11,22V20C9.58,19.82 8.23,19.25 7.1,18.37Z"
                  />
                </svg>
              </Memo(ProgressCheckIcon)>
            </h1>
             
            0
            % complete
          </div>
          <div
            className="text-muted"
          >
            10
             changesets total
          </div>
          <div
            className="d-flex align-items-center"
          >
            <Memo(SourceBranchIcon)
              className="icon-inline text-muted mr-2"
            >
              <svg
                className="mdi-icon icon-inline text-muted mr-2"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M13,14C9.64,14 8.54,15.35 8.18,16.24C9.25,16.7 10,17.76 10,19A3,3 0 0,1 7,22A3,3 0 0,1 4,19C4,17.69 4.83,16.58 6,16.17V7.83C4.83,7.42 4,6.31 4,5A3,3 0 0,1 7,2A3,3 0 0,1 10,5C10,6.31 9.17,7.42 8,7.83V13.12C8.88,12.47 10.16,12 12,12C14.67,12 15.56,10.66 15.85,9.77C14.77,9.32 14,8.25 14,7A3,3 0 0,1 17,4A3,3 0 0,1 20,7C20,8.34 19.12,9.5 17.91,9.86C17.65,11.29 16.68,14 13,14M7,18A1,1 0 0,0 6,19A1,1 0 0,0 7,20A1,1 0 0,0 8,19A1,1 0 0,0 7,18M7,4A1,1 0 0,0 6,5A1,1 0 0,0 7,6A1,1 0 0,0 8,5A1,1 0 0,0 7,4M17,6A1,1 0 0,0 16,7A1,1 0 0,0 17,8A1,1 0 0,0 18,7A1,1 0 0,0 17,6Z"
                />
              </svg>
            </Memo(SourceBranchIcon)>
             
             unpublished
          </div>
          <div
            className="d-flex align-items-center"
          >
            <Memo(SourceBranchIcon)
              className="icon-inline text-success mr-2"
            >
              <svg
                className="mdi-icon icon-inline text-success mr-2"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M13,14C9.64,14 8.54,15.35 8.18,16.24C9.25,16.7 10,17.76 10,19A3,3 0 0,1 7,22A3,3 0 0,1 4,19C4,17.69 4.83,16.58 6,16.17V7.83C4.83,7.42 4,6.31 4,5A3,3 0 0,1 7,2A3,3 0 0,1 10,5C10,6.31 9.17,7.42 8,7.83V13.12C8.88,12.47 10.16,12 12,12C14.67,12 15.56,10.66 15.85,9.77C14.77,9.32 14,8.25 14,7A3,3 0 0,1 17,4A3,3 0 0,1 20,7C20,8.34 19.12,9.5 17.91,9.86C17.65,11.29 16.68,14 13,14M7,18A1,1 0 0,0 6,19A1,1 0 0,0 7,20A1,1 0 0,0 8,19A1,1 0 0,0 7,18M7,4A1,1 0 0,0 6,5A1,1 0 0,0 7,6A1,1 0 0,0 8,5A1,1 0 0,0 7,4M17,6A1,1 0 0,0 16,7A1,1 0 0,0 17,8A1,1 0 0,0 18,7A1,1 0 0,0 17,6Z"
                />
              </svg>
            </Memo(SourceBranchIcon)>
             
             open
          </div>
          <div
            className="d-flex align-items-center"
          >
            <Memo(SourceMergeIcon)
              className="icon-inline text-merged mr-2"
            >
              <svg
                className="mdi-icon icon-inline text-merged mr-2"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M7,3A3,3 0 0,1 10,6C10,7.29 9.19,8.39 8.04,8.81C8.58,13.81 13.08,14.77 15.19,14.96C15.61,13.81 16.71,13 18,13A3,3 0 0,1 21,16A3,3 0 0,1 18,19C16.69,19 15.57,18.16 15.16,17C10.91,16.8 9.44,15.19 8,13.39V15.17C9.17,15.58 10,16.69 10,18A3,3 0 0,1 7,21A3,3 0 0,1 4,18C4,16.69 4.83,15.58 6,15.17V8.83C4.83,8.42 4,7.31 4,6A3,3 0 0,1 7,3M7,5A1,1 0 0,0 6,6A1,1 0 0,0 7,7A1,1 0 0,0 8,6A1,1 0 0,0 7,5M7,17A1,1 0 0,0 6,18A1,1 0 0,0 7,19A1,1 0 0,0 8,18A1,1 0 0,0 7,17M18,15A1,1 0 0,0 17,16A1,1 0 0,0 18,17A1,1 0 0,0 19,16A1,1 0 0,0 18,15Z"
                />
              </svg>
            </Memo(SourceMergeIcon)>
             
            0
             merged
          </div>
          <div
            className="d-flex align-items-center"
          >
            <Memo(SourceBranchIcon)
              className="icon-inline text-danger mr-2"
            >
              <svg
                className="mdi-icon icon-inline text-danger mr-2"
                fill="currentColor"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <path
                  d="M13,14C9.64,14 8.54,15.35 8.18,16.24C9.25,16.7 10,17.76 10,19A3,3 0 0,1 7,22A3,3 0 0,1 4,19C4,17.69 4.83,16.58 6,16.17V7.83C4.83,7.42 4,6.31 4,5A3,3 0 0,1 7,2A3,3 0 0,1 10,5C10,6.31 9.17,7.42 8,7.83V13.12C8.88,12.47 10.16,12 12,12C14.67,12 15.56,10.66 15.85,9.77C14.77,9.32 14,8.25 14,7A3,3 0 0,1 17,4A3,3 0 0,1 20,7C20,8.34 19.12,9.5 17.91,9.86C17.65,11.29 16.68,14 13,14M7,18A1,1 0 0,0 6,19A1,1 0 0,0 7,20A1,1 0 0,0 8,19A1,1 0 0,0 7,18M7,4A1,1 0 0,0 6,5A1,1 0 0,0 7,6A1,1 0 0,0 8,5A1,1 0 0,0 7,4M17,6A1,1 0 0,0 16,7A1,1 0 0,0 17,8A1,1 0 0,0 18,7A1,1 0 0,0 17,6Z"
                />
              </svg>
            </Memo(SourceBranchIcon)>
             
            0
             closed
          </div>
        </div>
      </div>
    </div>
  </CampaignStatsCard>
  <TabsWithURLViewStatePersistence
    className="panel__tabs mt-3"
    location="[Location path=/]"
    tabClassName="tab-bar__tab--h5like"
    tabs={
      Array [
        Object {
          "id": "changesets",
          "label": <React.Fragment>
            <Memo(SourceBranchIcon)
              className="icon-inline"
            />
             Changesets
             
            <span
              className="badge badge-secondary"
            >
              2
            </span>
          </React.Fragment>,
        },
        Object {
          "id": "burndownChart",
          "label": <React.Fragment>
            <Memo(ChartPpfIcon)
              className="icon-inline"
            />
             Burndown chart
          </React.Fragment>,
        },
      ]
    }
  >
    <Tabs
      activeTab="changesets"
      className="panel__tabs mt-3"
      location="[Location path=/]"
      tabClassName="tab-bar__tab--h5like"
      tabComponent={[Function]}
      tabs={
        Array [
          Object {
            "id": "changesets",
            "label": <React.Fragment>
              <Memo(SourceBranchIcon)
                className="icon-inline"
              />
               Changesets
               
              <span
                className="badge badge-secondary"
              >
                2
              </span>
            </React.Fragment>,
          },
          Object {
            "id": "burndownChart",
            "label": <React.Fragment>
              <Memo(ChartPpfIcon)
                className="icon-inline"
              />
               Burndown chart
            </React.Fragment>,
          },
        ]
      }
    >
      <div
        className="tabs panel__tabs mt-3"
      >
        <TabBar
          activeTab="changesets"
          tabClassName="tab-bar__tab--h5like"
          tabComponent={[Function]}
          tabs={
            Array [
              Object {
                "id": "changesets",
                "label": <React.Fragment>
                  <Memo(SourceBranchIcon)
                    className="icon-inline"
                  />
                   Changesets
                   
                  <span
                    className="badge badge-secondary"
                  >
                    2
                  </span>
                </React.Fragment>,
              },
              Object {
                "id": "burndownChart",
                "label": <React.Fragment>
                  <Memo(ChartPpfIcon)
                    className="icon-inline"
                  />
                   Burndown chart
                </React.Fragment>,
              },
            ]
          }
        >
          <div
            className="tab-bar "
          >
            <Component
              className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--active tab-bar__tab--h5like"
              key="changesets"
              tab={
                Object {
                  "id": "changesets",
                  "label": <React.Fragment>
                    <Memo(SourceBranchIcon)
                      className="icon-inline"
                    />
                     Changesets
                     
                    <span
                      className="badge badge-secondary"
                    >
                      2
                    </span>
                  </React.Fragment>,
                }
              }
            >
              <AnchorLink
                className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--active tab-bar__tab--h5like"
                onClick={[Function]}
                to={
                  Object {
                    "hash": "tab=changesets",
                    "key": undefined,
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  }
                }
              >
                <a
                  className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--active tab-bar__tab--h5like"
                  href="/#tab=changesets"
                  onClick={[Function]}
                >
                  <Memo(SourceBranchIcon)
                    className="icon-inline"
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M13,14C9.64,14 8.54,15.35 8.18,16.24C9.25,16.7 10,17.76 10,19A3,3 0 0,1 7,22A3,3 0 0,1 4,19C4,17.69 4.83,16.58 6,16.17V7.83C4.83,7.42 4,6.31 4,5A3,3 0 0,1 7,2A3,3 0 0,1 10,5C10,6.31 9.17,7.42 8,7.83V13.12C8.88,12.47 10.16,12 12,12C14.67,12 15.56,10.66 15.85,9.77C14.77,9.32 14,8.25 14,7A3,3 0 0,1 17,4A3,3 0 0,1 20,7C20,8.34 19.12,9.5 17.91,9.86C17.65,11.29 16.68,14 13,14M7,18A1,1 0 0,0 6,19A1,1 0 0,0 7,20A1,1 0 0,0 8,19A1,1 0 0,0 7,18M7,4A1,1 0 0,0 6,5A1,1 0 0,0 7,6A1,1 0 0,0 8,5A1,1 0 0,0 7,4M17,6A1,1 0 0,0 16,7A1,1 0 0,0 17,8A1,1 0 0,0 18,7A1,1 0 0,0 17,6Z"
                      />
                    </svg>
                  </Memo(SourceBranchIcon)>
                   Changesets
                   
                  <span
                    className="badge badge-secondary"
                  >
                    2
                  </span>
                </a>
              </AnchorLink>
            </Component>
            <Component
              className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--inactive tab-bar__tab--h5like"
              key="burndownChart"
              tab={
                Object {
                  "id": "burndownChart",
                  "label": <React.Fragment>
                    <Memo(ChartPpfIcon)
                      className="icon-inline"
                    />
                     Burndown chart
                  </React.Fragment>,
                }
              }
            >
              <AnchorLink
                className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--inactive tab-bar__tab--h5like"
                onClick={[Function]}
                to={
                  Object {
                    "hash": "tab=burndownChart",
                    "key": undefined,
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  }
                }
              >
                <a
                  className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--inactive tab-bar__tab--h5like"
                  href="/#tab=burndownChart"
                  onClick={[Function]}
                >
                  <Memo(ChartPpfIcon)
                    className="icon-inline"
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M5 6V8C8.2 8 11.36 9.18 13.57 11.15C15.64 13 16.83 15.5 17 18H18.97A14 12.5 0 0 0 5 6M22 21H2V3H4V19H22Z"
                      />
                    </svg>
                  </Memo(ChartPpfIcon)>
                   Burndown chart
                </a>
              </AnchorLink>
            </Component>
          </div>
        </TabBar>
        <CampaignChangesets
          campaignID="c"
          campaignUpdates="[Subject]"
          changesetUpdates="[Subject]"
          history="[History]"
          isLightTheme={true}
          key="changesets"
          location="[Location path=/]"
          telemetryService={
            Object {
              "log": [Function],
              "logViewEvent": [Function],
            }
          }
          viewerCanAdminister={true}
        />
      </div>
    </Tabs>
  </TabsWithURLViewStatePersistence>
</CampaignDetails>
`;
